fixed image spacing issue on safari ios, removed scroll lock on modal view

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -172,7 +172,6 @@
     height: 75%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     flex-wrap: wrap;
     position: absolute;
     left: 50%;
@@ -182,14 +181,19 @@
     overflow-y: auto;
     padding: 10px;
 }
+.thumbnailDivWrapper {
+    position: relative;
+    margin: auto;
+    padding: 10px;
+}
 .thumbnailDiv {
+    flex: none;
     width: 250px;
     height: 250px;
     position: relative;
     border-radius: 10px;
-    margin: 10px;
+    margin: auto;
     overflow: hidden;
-    flex: none;
 }
 .thumbnail{
     width: 100%;
